feat: change api properties

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <div>
       <ubiqq-ai-components
         userid="webdev.michell@gmail.com"
-      
+        room="ubiqq"
       ></ubiqq-ai-components>
     </div>
   </body>
